[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "usagemanager-client"
version = "1.1.0"
description = "Client SDK for the centralized Usage Manager service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
